[package]
name = "sss-computing-math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "^0.10"
csv = "1.2.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
plotly = "0.8.4"