[package]
name = "ship-strength-monitoring-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "^0.10"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
plotly = "0.8.4"
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features = ["json"]}
